[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/themes/dialogue_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Dialogue/Dialogue.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/font_12_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/sounds/open.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=3]
resource_name = "Close"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 16, 0, 0, 0, 0, 480, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer/PanelContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 16, 0, 0, 0, 0, 75, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer/PanelContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, 0, 0, 0, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer/PanelContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, 0, 0, 0, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer/PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, 0, 0, 0, 0, 0, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=1]
resource_name = "Open"
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 480, 0, 0, 0, 0, 16, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer/PanelContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 75, 0, 0, 0, 0, 16, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer/PanelContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer/PanelContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1e-05, 0, 0, 0, 0, 1, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer/PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, 0, 0, 0, 0, 1, -1, 0, 0, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("MarginContainer/PanelContainer:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 480, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MarginContainer/PanelContainer:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 490, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MarginContainer/PanelContainer:rect_scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MarginContainer/PanelContainer:rect_scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("MarginContainer/PanelContainer:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Dialogue" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -157.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 480.0
margin_top = 490.0
margin_right = 1408.0
margin_bottom = 615.0
rect_min_size = Vector2( 0, 125 )
rect_scale = Vector2( 1e-05, 1e-05 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 912.0
margin_bottom = 109.0

[node name="SpeakerLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 17.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Speaker"

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 896.0
margin_bottom = 93.0
size_flags_vertical = 3
bbcode_enabled = true
visible_characters = 0
scroll_active = false

[node name="Label" type="Label" parent="MarginContainer/PanelContainer"]
margin_left = 16.0
margin_top = 95.0
margin_right = 912.0
margin_bottom = 109.0
size_flags_vertical = 8
text = "[Presiona espacio para continuar]"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Close = SubResource( 3 )
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CharactersTimer" type="Timer" parent="."]

[node name="OpenSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sfx"
